    (isolated) context and popped after; field values can now be referenced
    directly in expressions in @condition, @text, etc attributes
- Integration Features
  - New Service REST API tool
    - define REST resources and methods in XML files (see rest-api-1.6.xsd)
    - map methods under resources to service calls and entity operations
    - see example Service REST API in example.rest.xml
    - call REST methods through the /rest/s1 transition
    - see example client calls in the rest.xml screen definition file
    - get Swagger API definition from /rest/service.swagger
    - get RAML API definition from /rest/service.raml
  - New RestClient API, available through ec.service.rest(), with various
    options for doing HTTP requests and parsing response
  - Added json-schema for Entity REST API: for all entities get
    /rest/entity.json, for a single entity get /rest/entity.json/${name}.json
  - Added RAML API definition for Entity REST API at /rest/entity.raml
  - Added Swagger API definition for Entity REST API at /rest/entity.swagger
  - Entity REST API supports master definitions through
    /rest/m1/${entity}/${master} or /rest/v1/${entity}?master=${master};
    see comments in the rest.xml screen definition XML file for examples
  - Added RAML API definition for Entity Master REST API at /rest/master.raml
  - Added Swagger definition for Entity Master REST at /rest/master.swagger
  - SystemMessage entity has additional fields to identify messages
  - Changed receive#SystemMessage to an interface, now use
    receive#IncomingSystemMessage for remote calls, will call the
    SystemMessageType.receiveServiceName service if specified to save message
  - Added EDI handler (parser and generator), used in Mantle for X12 messages
- Email Features
  - Various improvements to email message polling (calling EM-ECA rules)
    including support for Java System Properties pass through and fix for
    password pass through for IMAPS/etc